name:                yampa-canvas
version:             0.1.0.2
synopsis:            blank-canvas frontend for yampa
license:             BSD2
license-file:        LICENSE
author:              Neil Sculthorpe
maintainer:          andygill@ku.edu
 copyright:          Copyright (c) 2014 The University of Kansas
category:            Graphics
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:     FRP.Yampa.Canvas
  other-extensions:    ScopedTypeVariables
  build-depends:       base >=4.7 && <4.8, time >=1.4 && <1.5, blank-canvas >=0.4 && <0.5, Yampa == 0.9.6, stm == 2.4.*
  hs-source-dirs:      src
  default-language:    Haskell2010

executable yampa-canvas-bouncing-balls
  Build-Depends:  base >=4.7 && <4.8, yampa-canvas == 0.1.0.2, time >=1.4 && <1.5, blank-canvas >=0.4 && <0.5, Yampa == 0.9.6, stm == 2.4.*, text == 1.1.*
  Main-Is:        DropBalls.hs
  Hs-Source-Dirs: example, src
  default-language:    Haskell2010
  Ghc-Options: -Wall -threaded
