name:                yampa-canvas
version:             0.2
synopsis:            blank-canvas frontend for yampa
license:             BSD3
license-file:        LICENSE
author:              Neil Sculthorpe
maintainer:          andygill@ku.edu
copyright:           Copyright (c) 2014 The University of Kansas
category:            Graphics
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:     FRP.Yampa.Canvas
  other-extensions:    ScopedTypeVariables
  build-depends:       base            >= 4.7   && < 4.8,
                       blank-canvas    >= 0.5   && < 0.6,
                       stm             == 2.4.*,
                       time            >= 1.4   && < 1.5,
                       Yampa           >= 0.9.6 && < 0.10
  hs-source-dirs:      src
  default-language:    Haskell2010

flag example
  Description:         Please build the example
  Default:             False

executable yampa-canvas-bouncing-balls
  if flag(example)
    buildable:	       True
  else
    buildable:	       False
  build-depends:       base            >= 4.7   && < 4.8,
                       blank-canvas    >= 0.5   && < 0.6,
                       text            >= 1.1   && < 1.3,
                       Yampa           >= 0.9.6 && < 0.10,
                       yampa-canvas    == 0.2
  main-is:             DropBalls.hs
  other-modules:       BouncingBalls
  hs-source-dirs:      example
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded
